# wetron-rest-backend

./: CMakeLists.txt  Dockerfile.build  Dockerfile.static  Makefile  README.md  Swaggerfile.yaml  main.cpp
go/: README.md  games.go  logger.go  routers.go
